k8s/scrypted/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      hostNetwork: true
      nodeSelector:
        nvidia.com/gpu.present: 'true'
        nvidia.com/gpu.product: NVIDIA-GeForce-GTX-750-Ti-SHARED
      runtimeClassName: nvidia
      containers:
        - name: scrypted
          image: ghcr.io/koush/scrypted:v0.123.58-jammy-nvidia@sha256:47a9b733493bd1aab5dcfbfb10c5cf379168c1f5545652946fad657df77ab309
          resources:
            requests:
              memory: 750M
            limits:
              nvidia.com/gpu: 1
              memory: 1G
          volumeMounts:
            - name: volume
              mountPath: /server/volume
          ports:
            - name: web
              containerPort: 11080
